# Vocabulary_Backend

./: CMakeLists.txt
Vocabulary/include/Core/: Base.h  IResourceFactory.h  Logger.h  MethodHandlers.h  VocabularyService.h
Vocabulary/json_singletons/: JSONDatabaseUser.cpp  JSONDatabaseUser.h  JSONDatabaseVocabulary.cpp  JSONDatabaseVocabulary.h
Vocabulary/sqlite_database/: VocabularyDatabaseSQLite.cpp  VocabularyDatabaseSQLite.h
Vocabulary/src/Core/: Base.h  EntryPoint.cpp  IResourceFactory.h  IService.h  IServiceSettingsFactory.h  Logger.cpp  Logger.h  MethodHandlers.cpp  MethodHandlers.h  RestbedAPILogger.cpp  RestbedAPILogger.h  VocabularyResourceFactory.cpp  VocabularyResourceFactory.h  VocabularyService.cpp  VocabularyService.h  VocabularyServiceSettingsFactory.cpp  VocabularyServiceSettingsFactory.cpp.save  VocabularyServiceSettingsFactory.h
